1、设计器优化 2、中央包管理

--- a/src/H.LowCode.Common/H.LowCode.Metadata/H.LowCode.Metadata.csproj
+++ b/src/H.LowCode.Common/H.LowCode.Metadata/H.LowCode.Metadata.csproj
@@ -2,8 +2,8 @@
 	
 	<Import Project="..\..\global.props" />
 	<ItemGroup>
-		<PackageReference Include="H.Extensions.System" Version="0.1.2" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.3" />
+		<PackageReference Include="H.Extensions.System" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" />
 	</ItemGroup>
 
 </Project>
