--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.JsonFile/H.LowCode.Designer.Repository.JsonFile.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.JsonFile/H.LowCode.Designer.Repository.JsonFile.csproj
@@ -3,8 +3,8 @@
 	<Import Project="..\..\global.props" />
 
   <ItemGroup>
-    <PackageReference Include="H.Ddd.Repository" Version="0.1.2" />
-    <PackageReference Include="H.Extensions.System" Version="0.1.2" />
+    <PackageReference Include="H.Ddd.Repository" />
+    <PackageReference Include="H.Extensions.System" />
   </ItemGroup>
 
   <ItemGroup>
