--- a/src/H.LowCode.RenderEngine/H.LowCode.Render.Application/H.LowCode.Render.Application.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Render.Application/H.LowCode.Render.Application.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\..\global.props" />
 
   <ItemGroup>
-    <PackageReference Include="H.Ddd.Application" Version="0.1.2" />
+    <PackageReference Include="H.Ddd.Application" />
   </ItemGroup>
 
   <ItemGroup>
