--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -4,7 +4,7 @@
 	<Import Project="..\..\lowcode.props" />
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.3" />
+	<PackageReference Include="Microsoft.AspNetCore.Components" />
   </ItemGroup>
 
   <ItemGroup>
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.System" Version="0.1.2" />
+    <PackageReference Update="H.Extensions.System" />
   </ItemGroup>
 
 </Project>
