--- a/src/lowcode.props
+++ b/src/lowcode.props
@@ -1,5 +1,5 @@
 <Project>
 	<ItemGroup>
-		<PackageReference Include="H.Extensions.System" Version="0.1.2" />
+		<PackageReference Include="H.Extensions.System" />
 	</ItemGroup>
 </Project>
