--- a/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.Host/H.LowCode.WorkflowEngine.Host.csproj
+++ b/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.Host/H.LowCode.WorkflowEngine.Host.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\..\..\global.props" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" />
   </ItemGroup>
 
   <ItemGroup>
