--- a/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.HttpApi/H.LowCode.WorkflowEngine.HttpApi.csproj
+++ b/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.HttpApi/H.LowCode.WorkflowEngine.HttpApi.csproj
@@ -3,8 +3,8 @@
 	<Import Project="..\..\..\global.props" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.3" />
-	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" />
+	<PackageReference Include="Swashbuckle.AspNetCore" />
   </ItemGroup>
 
   <ItemGroup>
