--- a/src/H.Components/H.Utils.CSharpScriptEngine/H.Utils.CSharpScriptEngine.csproj
+++ b/src/H.Components/H.Utils.CSharpScriptEngine/H.Utils.CSharpScriptEngine.csproj
@@ -3,9 +3,9 @@
 	<Import Project="..\..\global.props" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.5.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="4.5.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" />
   </ItemGroup>
 
 </Project>
