--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/H.LowCode.DesignEngine.Components.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/H.LowCode.DesignEngine.Components.csproj
@@ -7,9 +7,9 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="AntDesign" Version="0.14.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
+	<PackageReference Include="AntDesign" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
   </ItemGroup>
 
   <ItemGroup>
