--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -15,11 +15,11 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="AntDesign" Version="0.14.3" />
-	<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
-	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
-	<PackageReference Include="AntDesign.ProLayout" Version="0.13.1" />
-	<PackageReference Include="System.Net.Http.Json" Version="7.0.0" />
+	<PackageReference Include="AntDesign" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+	<PackageReference Include="AntDesign.ProLayout" />
+	<PackageReference Include="System.Net.Http.Json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.System" Version="0.1.2" />
+    <PackageReference Update="H.Extensions.System" />
   </ItemGroup>
 
 </Project>
