--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
@@ -3,8 +3,8 @@
 	<Import Project="..\..\global.props" />
 
   <ItemGroup>
-    <PackageReference Include="H.Ddd.HttpApi" Version="0.1.2" />
-    <PackageReference Include="Volo.Abp.Core" Version="7.0.2" />
+    <PackageReference Include="H.Ddd.HttpApi" />
+    <PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
   <ItemGroup>
