--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.MongoDB/H.LowCode.Designer.Repository.MongoDB.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.MongoDB/H.LowCode.Designer.Repository.MongoDB.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\..\global.props" />
 
   <ItemGroup>
-    <PackageReference Include="H.Ddd.Repository" Version="0.1.2" />
+    <PackageReference Include="H.Ddd.Repository" />
   </ItemGroup>
 
   <ItemGroup>
