--- a/src/H.LowCode.RenderEngine/H.LowCode.Render.WasmHost/H.LowCode.Render.WasmHost.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Render.WasmHost/H.LowCode.Render.WasmHost.csproj
@@ -3,8 +3,8 @@
 	<Import Project="..\..\global.props" />
 
 	<ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.3" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
