--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
@@ -4,9 +4,9 @@
 	<Import Project="..\..\lowcode.props" />
 
   <ItemGroup>
-	<PackageReference Include="AntDesign" Version="0.14.3" />
-	<PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.3" />
-	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
+	<PackageReference Include="AntDesign" />
+	<PackageReference Include="Microsoft.AspNetCore.Components" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly"/>
   </ItemGroup>
 
   <ItemGroup>
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.System" Version="0.1.2" />
+    <PackageReference Update="H.Extensions.System" />
   </ItemGroup>
 
 </Project>
