--- a/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine.Html/H.LowCode.RenderEngine.Html.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.RenderEngine.Html/H.LowCode.RenderEngine.Html.csproj
@@ -4,8 +4,8 @@
 	<Import Project="..\..\lowcode.props" />
 
   <ItemGroup>
-	  <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.3" />
-	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
   </ItemGroup>
 
   <ItemGroup>
