--- a/src/H.LowCode.RenderEngine/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
@@ -8,10 +8,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
-    <PackageReference Include="AntDesign.ProLayout" Version="0.13.1" />
-    <PackageReference Include="System.Net.Http.Json" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="AntDesign.ProLayout" />
+    <PackageReference Include="System.Net.Http.Json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.System" Version="0.1.2" />
+    <PackageReference Update="H.Extensions.System" />
   </ItemGroup>
 
 </Project>
