--- a/src/H.LowCode.RenderEngine/H.LowCode.Theme.Html/H.LowCode.Theme.Html.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Theme.Html/H.LowCode.Theme.Html.csproj
@@ -8,9 +8,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
-    <PackageReference Include="System.Net.Http.Json" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="System.Net.Http.Json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.System" Version="0.1.2" />
+    <PackageReference Update="H.Extensions.System" />
   </ItemGroup>
 
 </Project>
