--- a/src/H.LowCode.RenderEngine/Samples/H.LowCode.Render.Sample/H.LowCode.Render.Sample.csproj
+++ b/src/H.LowCode.RenderEngine/Samples/H.LowCode.Render.Sample/H.LowCode.Render.Sample.csproj
@@ -7,7 +7,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
   </ItemGroup>
 
 </Project>
