1、调整 props、NuGet.config 目录 2、增加 docs 项目

--- a/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/H.LowCode.WorkflowEngine.WasmHost.csproj
+++ b/src/H.Components/H.LowCode.WorkflowEngine/H.LowCode.WorkflowEngine.WasmHost/H.LowCode.WorkflowEngine.WasmHost.csproj
@@ -4,7 +4,7 @@
 	  <UserSecretsId>baaab3a8-7079-4786-91ce-abafbfbe6e56</UserSecretsId>
 	</PropertyGroup>
 
-	<Import Project="..\..\..\global.props" />
+	<Import Project="..\..\..\..\global.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
