--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Domain/H.LowCode.Designer.Domain.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Domain/H.LowCode.Designer.Domain.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\global.props" />
+	<Import Project="..\..\..\global.props" />
 
   <ItemGroup>
     <ProjectReference Include="..\H.LowCode.Designer.Domain.Abstraction\H.LowCode.Designer.Domain.Abstraction.csproj" />
