--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,12 @@ packages/
 # Visual Studio 2015 cache/options directory
 .vs/
 
+# Visual Studio Code
+.vscode/
+
+# idea
+.idea/
+
 
 #MSTest test Results
 [Tt]est[Rr]esult*/
