--- a/src/H.LowCode.Common/H.LowCode.Metadata/H.LowCode.Metadata.csproj
+++ b/src/H.LowCode.Common/H.LowCode.Metadata/H.LowCode.Metadata.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	
-	<Import Project="..\..\global.props" />
+	<Import Project="..\..\..\global.props" />
 	<ItemGroup>
 		<PackageReference Include="H.Extensions.System" />
 		<PackageReference Include="Microsoft.AspNetCore.Components" />
