--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 	
-	<Import Project="..\..\global.props" />
+	<Import Project="..\..\..\global.props" />
 	
 	<ItemGroup>
 	  <None Remove="DesignPanel\DropItem.razor.css" />
