--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.Abstraction/H.LowCode.Designer.Repository.Abstraction.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.Abstraction/H.LowCode.Designer.Repository.Abstraction.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\global.props" />
+	<Import Project="..\..\..\global.props" />
 	<Import Project="..\..\lowcode.props" />
 	<ItemGroup>
 	  <PackageReference Update="H.Extensions.System" />
