--- a/src/H.LowCode.RenderEngine/H.LowCode.Render.Host/H.LowCode.Render.Host.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Render.Host/H.LowCode.Render.Host.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<Import Project="..\..\global.props" />
+	<Import Project="..\..\..\global.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" />
