--- a/src/H.LowCode.RenderEngine/H.LowCode.Theme.Html/H.LowCode.Theme.Html.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Theme.Html/H.LowCode.Theme.Html.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-	<Import Project="..\..\global.props" />
+	<Import Project="..\..\..\global.props" />
 	<Import Project="..\..\lowcode.props" />
 
   <ItemGroup>
