文档站点使用 dumi 样式

--- a/docs/H.LowCode.Docs.WasmHost/H.LowCode.Docs.WasmHost.csproj
+++ b/docs/H.LowCode.Docs.WasmHost/H.LowCode.Docs.WasmHost.csproj
@@ -8,6 +8,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\H.LowCode.Docs.Dumi\H.LowCode.Docs.Dumi.csproj" />
     <ProjectReference Include="..\H.LowCode.Docs\H.LowCode.Docs.csproj" />
   </ItemGroup>
 
