--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- 官方库 -->
+    <PackageVersion Include="Markdig" Version="0.31.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="7.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.Components" Version="7.0.8" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.8" />
