H.LowCode.Docs 基于 dumi 设置样式

--- a/docs/H.LowCode.Docs/H.LowCode.Docs.csproj
+++ b/docs/H.LowCode.Docs/H.LowCode.Docs.csproj
@@ -3,6 +3,10 @@
 	<Import Project="..\..\global.props" />
 
 	<ItemGroup>
+	  <Content Include="Pages\Introduce.md" />
+	</ItemGroup>
+
+	<ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 
@@ -13,6 +17,10 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\H.LowCode.Docs.Dumi\H.LowCode.Docs.Dumi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
