--- a/docs/H.LowCode.Docs.Dumi/H.LowCode.Docs.Dumi.csproj
+++ b/docs/H.LowCode.Docs.Dumi/H.LowCode.Docs.Dumi.csproj
@@ -7,6 +7,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="Markdig" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
   </ItemGroup>
 
