--- a/docs/H.LowCode.Docs/H.LowCode.Docs.csproj
+++ b/docs/H.LowCode.Docs/H.LowCode.Docs.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\..\global.props" />
 
 	<ItemGroup>
-	  <Content Include="Pages\Introduce.md" />
+	  <EmbeddedResource Include="Pages\Introduces\Introduce.md" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -11,7 +11,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Markdig" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
   </ItemGroup>
 
@@ -21,12 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\H.LowCode.Docs.Dumi\H.LowCode.Docs.Dumi.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="Pages\Index.razor">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-    </Content>
   </ItemGroup>
 
 </Project>
