1、批量设置 md 文件为内嵌资源文件 2、导航及文档选中高亮

--- a/docs/H.LowCode.Docs/H.LowCode.Docs.csproj
+++ b/docs/H.LowCode.Docs/H.LowCode.Docs.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\..\global.props" />
 
 	<ItemGroup>
-	  <EmbeddedResource Include="Pages\Introduces\Introduce.md" />
+	  <EmbeddedResource Include="**\*.md" />
 	</ItemGroup>
 
 	<ItemGroup>
