--- a/docs/H.LowCode.Docs/H.LowCode.Docs.csproj
+++ b/docs/H.LowCode.Docs/H.LowCode.Docs.csproj
@@ -7,11 +7,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Pages\Blazor\I18nDev.md" />
+	  <None Remove="Pages\Blazor\I18n.md" />
+	  <None Remove="Pages\Blazor\Index - 复制.md" />
 	  <None Remove="Pages\Blazor\Index.md" />
-	  <None Remove="Pages\Blazor\ThemeDev.md" />
+	  <None Remove="Pages\Blazor\Login.md" />
+	  <None Remove="Pages\Blazor\Theme.md" />
 	  <None Remove="Pages\Introduce\ChangLog.md" />
 	  <None Remove="Pages\Introduce\Roadmap.md" />
+	  <None Remove="Pages\LowCode\DragDropSample.md" />
+	  <None Remove="Pages\LowCode\HtmlDragDrop.md" />
+	  <None Remove="Pages\LowCode\PageDesigner.md" />
 	</ItemGroup>
 
 	<ItemGroup>
