--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.MongoDB/H.LowCode.Designer.Repository.MongoDB.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Repository.MongoDB/H.LowCode.Designer.Repository.MongoDB.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\..\global.props" />
+	<Import Project="..\..\global.props" />
 
   <ItemGroup>
     <PackageReference Include="H.Ddd.Repository" />
