--- a/src/H.LowCode.RenderEngine/H.LowCode.Render.WasmHost/H.LowCode.Render.WasmHost.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Render.WasmHost/H.LowCode.Render.WasmHost.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-	<Import Project="..\..\..\global.props" />
+	<Import Project="..\..\global.props" />
 
 	<ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
