--- a/src/H.LowCode.DesignEngine/Admin/H.LowCode.Designer.Admin.Application/H.LowCode.Designer.Admin.Application.csproj
+++ b/src/H.LowCode.DesignEngine/Admin/H.LowCode.Designer.Admin.Application/H.LowCode.Designer.Admin.Application.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\..\..\global.props" />
+	<Import Project="..\..\..\global.props" />
 	
 </Project>
