--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application/H.LowCode.Designer.Application.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application/H.LowCode.Designer.Application.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\..\global.props" />
+	<Import Project="..\..\global.props" />
 
   <ItemGroup>
     <ProjectReference Include="..\H.LowCode.Designer.Application.Abstraction\H.LowCode.Designer.Application.Abstraction.csproj" />
