--- a/src/H.LowCode.RenderEngine/H.LowCode.Render.HttpApi/H.LowCode.Render.HttpApi.csproj
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Render.HttpApi/H.LowCode.Render.HttpApi.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<Import Project="..\..\..\global.props" />
+	<Import Project="..\..\global.props" />
 
 	<ItemGroup>
 		<PackageReference Include="H.Ddd.HttpApi" />
