--- a/src/H.LowCode.RenderEngine/Samples/H.LowCode.Render.Sample/H.LowCode.Render.Sample.csproj
+++ b/src/H.LowCode.RenderEngine/Samples/H.LowCode.Render.Sample/H.LowCode.Render.Sample.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
-	<Import Project="..\..\..\..\global.props" />
+	<Import Project="..\..\..\global.props" />
 
 	<ItemGroup>
     <SupportedPlatform Include="browser" />
