调整目录结构

--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.HttpApi/H.LowCode.Designer.HttpApi.csproj
@@ -4,11 +4,10 @@
 
   <ItemGroup>
     <PackageReference Include="H.Ddd.HttpApi" />
-    <PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\H.LowCode.Designer.Application.Abstraction\H.LowCode.Designer.Application.Abstraction.csproj" />
+    <ProjectReference Include="..\..\H.LowCode.RenderEngine\H.LowCode.Render.Application.Abstraction\H.LowCode.Render.Application.Abstraction.csproj" />
     <ProjectReference Include="..\H.LowCode.Designer.Application\H.LowCode.Designer.Application.csproj" />
   </ItemGroup>
 
