--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.WasmHost/H.LowCode.Designer.WasmHost.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.WasmHost/H.LowCode.Designer.WasmHost.csproj
@@ -8,10 +8,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Admin\H.LowCode.Designer.Admin\H.LowCode.Designer.Admin.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine.Components.Custom\H.LowCode.DesignEngine.Components.Custom.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine.Components\H.LowCode.DesignEngine.Components.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
+    <ProjectReference Include="..\H.LowCode.Designer.Admin\H.LowCode.Designer.Admin.csproj" />
   </ItemGroup>
 
 </Project>
