--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Admin/H.LowCode.Designer.Admin.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Admin/H.LowCode.Designer.Admin.csproj
@@ -1,7 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-	<Import Project="..\..\..\global.props" />
-	<Import Project="..\..\..\lowcode.props" />
+	<Import Project="..\..\global.props" />
+	<Import Project="..\..\lowcode.props" />
+	<ItemGroup>
+	  <Compile Remove="wwwroot\**" />
+	  <Content Remove="wwwroot\**" />
+	  <EmbeddedResource Remove="wwwroot\**" />
+	  <None Remove="wwwroot\**" />
+	</ItemGroup>
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -12,10 +18,6 @@
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
 	<PackageReference Include="AntDesign.ProLayout" />
 	<PackageReference Include="System.Net.Http.Json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
