--- a/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application/H.LowCode.Designer.Application.csproj
+++ b/src/H.LowCode.DesignEngine/H.LowCode.Designer.Application/H.LowCode.Designer.Application.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\..\global.props" />
-
-  <ItemGroup>
-    <ProjectReference Include="..\H.LowCode.Designer.Application.Abstraction\H.LowCode.Designer.Application.Abstraction.csproj" />
-    <ProjectReference Include="..\H.LowCode.Designer.Domain.Abstraction\H.LowCode.Designer.Domain.Abstraction.csproj" />
-    <ProjectReference Include="..\H.LowCode.Designer.Domain\H.LowCode.Designer.Domain.csproj" />
-  </ItemGroup>
+	
+	<ItemGroup>
+		<PackageReference Include="H.Ddd.Application" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <ProjectReference Include="..\H.LowCode.Designer.Application.Abstraction\H.LowCode.Designer.Application.Abstraction.csproj" />
+	</ItemGroup>
 
 </Project>
