--- a/src/Sample/H.LowCode.Sample.Admin/H.LowCode.Sample.Admin.csproj
+++ b/src/Sample/H.LowCode.Sample.Admin/H.LowCode.Sample.Admin.csproj
@@ -23,4 +23,8 @@
     <PackageReference Update="H.Extensions.System" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
