--- a/src/Sample/H.LowCode.Sample.Admin/H.LowCode.Sample.Admin.csproj
+++ b/src/Sample/H.LowCode.Sample.Admin/H.LowCode.Sample.Admin.csproj
@@ -2,6 +2,12 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\lowcode.props" />
+	<ItemGroup>
+	  <Compile Remove="wwwroot\**" />
+	  <Content Remove="wwwroot\**" />
+	  <EmbeddedResource Remove="wwwroot\**" />
+	  <None Remove="wwwroot\**" />
+	</ItemGroup>
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -21,10 +27,6 @@
 
   <ItemGroup>
     <PackageReference Update="H.Extensions.System" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
