--- a/src/Sample/H.LowCode.Sample.Host/Properties/launchSettings.json
+++ b/src/Sample/H.LowCode.Sample.Host/Properties/launchSettings.json
@@ -1,11 +1,22 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
     "profiles": {
-      "H.LowCode.Sample.Host": {
+      "http": {
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-        "applicationUrl": "https://localhost:5102;http://localhost:5002",
+        "applicationUrl": "http://localhost:5179",
+        "environmentVariables": {
+          "ASPNETCORE_ENVIRONMENT": "Development"
+        }
+      },
+      "https": {
+        "commandName": "Project",
+        "dotnetRunMessages": true,
+        "launchBrowser": true,
+        "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+        "applicationUrl": "https://localhost:7007;http://localhost:5179",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
