修改依赖关系

--- a/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -21,6 +21,7 @@
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
 	<PackageReference Include="AntDesign.ProLayout" />
 	<PackageReference Include="System.Net.Http.Json" />
+	<PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
   <ItemGroup>
