--- a/src/RenderEngine/H.LowCode.RenderEngine.Html/H.LowCode.RenderEngine.Html.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Html/H.LowCode.RenderEngine.Html.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.Components" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+	  <PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
   <ItemGroup>
