--- a/src/DesignEngine/H.LowCode.DesignEngine.Components.Custom/H.LowCode.DesignEngine.Components.Custom.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Components.Custom/H.LowCode.DesignEngine.Components.Custom.csproj
@@ -11,6 +11,7 @@
 	<PackageReference Include="AntDesign" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
   <ItemGroup>
