--- a/src/RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
@@ -6,7 +6,8 @@
   <ItemGroup>
 	<PackageReference Include="AntDesign" />
 	<PackageReference Include="Microsoft.AspNetCore.Components" />
-	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly"/>
+	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+	<PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
   <ItemGroup>
