主题更新为默认,移除AntDesign.ProLayout依赖

--- a/src/Sample/H.LowCode.Sample.Host/H.LowCode.Sample.Host.csproj
+++ b/src/Sample/H.LowCode.Sample.Host/H.LowCode.Sample.Host.csproj
@@ -3,6 +3,10 @@
 	<Import Project="..\..\global.props" />
 
 	<ItemGroup>
+	  <None Include="wwwroot\bootstrap\bootstrap.min.css.map" />
+	</ItemGroup>
+
+	<ItemGroup>
     <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.Components.Custom\H.LowCode.DesignEngine.Components.Custom.csproj" />
     <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.Components\H.LowCode.DesignEngine.Components.csproj" />
     <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
