--- a/src/global.props
+++ b/src/global.props
@@ -3,13 +3,15 @@
     <TargetFramework>net8.0</TargetFramework>
 	<ImplicitUsings>enable</ImplicitUsings>
 	<!--<Nullable>enable</Nullable>-->
-    <Version>0.1.1</Version>
+    <Version>0.1.4</Version>
 	<GeneratePackageOnBuild>False</GeneratePackageOnBuild>
 	<!-- Copyright -->
 	<Authors>H</Authors>
 	<Company>H</Company>
+	<Description>H.LowCode</Description>
   </PropertyGroup>
-	<Target Name="CopyPackage" AfterTargets="Pack">
-		<Copy SourceFiles="$(ProjectDir)bin\Debug\$(PackageId).$(PackageVersion).nupkg" DestinationFolder="D:\H\NuGetPackages" />
+	<Target Name="PushNugetPackage" AfterTargets="Pack">
+		<!-- nuget 的 api_key 从本机环境变量 NUGET_API_KEY 中获取 -->
+		<Exec Command="dotnet nuget push $(ProjectDir)bin\Debug\$(PackageId).$(PackageVersion).nupkg -k $(NUGET_API_KEY) -s https://api.nuget.org/v3/index.json --skip-duplicate"></Exec>
 	</Target>
 </Project>
