修复跨 DropItemContainer 拖拽部分 bug

--- a/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -4,9 +4,11 @@
 	
 	<ItemGroup>
 	  <None Remove="DesignPanel\DropItem.razor.css" />
+	  <None Remove="DesignPanel\DropItemContainer.razor.css" />
 	</ItemGroup>
 	
 	<ItemGroup>
+	  <Content Include="DesignPanel\DropItemContainer.razor.css" />
 	  <Content Include="DesignPanel\DropItem.razor.css" />
 	</ItemGroup>
 
