--- a/src/DesignEngine/H.LowCode.DesignEngine.Components/H.LowCode.DesignEngine.Components.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Components/H.LowCode.DesignEngine.Components.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+    <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
   </ItemGroup>
 
