--- a/src/Schema/H.LowCode.MetaSchema/Properties/launchSettings.json
+++ b/src/Schema/H.LowCode.MetaSchema/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "H.LowCode.Metadata": {
+    "H.LowCode.MetaSchema": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
