--- a/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\H.LowCode.Metadata\H.LowCode.Metadata.csproj" />
+    <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
   </ItemGroup>
 
   <ItemGroup>
