- H.LowCode.DesignEngine.Components 重命名为 H.LowCode.DesignEngine.DefaultComponents - H.LowCode.DesignEngine.Components.Custom 重命名为 H.LowCode.DesignEngine.CustomComponents - 增加 Layout 布局组件

--- a/src/DesignEngine/H.LowCode.DesignEngine.CustomComponents/H.LowCode.DesignEngine.CustomComponents.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.CustomComponents/H.LowCode.DesignEngine.CustomComponents.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<Import Project="..\..\global.props" />
-  <Import Project="..\..\lowcode.props" />
+    <Import Project="..\..\lowcode.props" />
+	<Import Project="..\..\nuget.props" />
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -20,10 +21,6 @@
 
   <ItemGroup>
     <PackageReference Update="H.Extensions.System" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
