--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/H.LowCode.DesignEngine.DefaultComponents.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/H.LowCode.DesignEngine.DefaultComponents.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<Import Project="..\..\global.props" />
+	<Import Project="..\..\nuget.props" />
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -16,10 +17,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
