--- a/src/RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
@@ -2,6 +2,7 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\lowcode.props" />
+	<Import Project="..\..\nuget.props" />
 
   <ItemGroup>
 	<PackageReference Include="AntDesign" />
