--- a/src/Sample/H.LowCode.Sample.Host.Client/H.LowCode.Sample.Host.Client.csproj
+++ b/src/Sample/H.LowCode.Sample.Host.Client/H.LowCode.Sample.Host.Client.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.Components.Custom\H.LowCode.DesignEngine.Components.Custom.csproj" />
-    <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.Components\H.LowCode.DesignEngine.Components.csproj" />
+    <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.CustomComponents\H.LowCode.DesignEngine.CustomComponents.csproj" />
+    <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.DefaultComponents\H.LowCode.DesignEngine.DefaultComponents.csproj" />
     <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
     <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine.AntBlazor\H.LowCode.RenderEngine.AntBlazor.csproj" />
     <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine.Html\H.LowCode.RenderEngine.Html.csproj" />
