--- a/src/Schema/H.LowCode.MetaSchema/H.LowCode.MetaSchema.csproj
+++ b/src/Schema/H.LowCode.MetaSchema/H.LowCode.MetaSchema.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	
 	<Import Project="..\..\global.props" />
+	<Import Project="..\..\nuget.props" />
+	
 	<ItemGroup>
 		<PackageReference Include="H.Extensions.System" />
 		<PackageReference Include="Microsoft.AspNetCore.Components" />
