--- a/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 	
 	<Import Project="..\..\global.props" />
+	<Import Project="..\..\nuget.props" />
 	
 	<ItemGroup>
 	  <None Remove="DesignPanel\DropItem.razor.css" />
