--- a/src/DesignEngine/H.LowCode.DesignEngine.CustomComponents/H.LowCode.DesignEngine.CustomComponents.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.CustomComponents/H.LowCode.DesignEngine.CustomComponents.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="AntDesign" />
+	<PackageReference Include="H.Util.Blazor" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Volo.Abp.Core" />
