--- a/src/DesignEngine/H.LowCode.DesignEngine.CustomComponents/H.LowCode.DesignEngine.CustomComponents.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.CustomComponents/H.LowCode.DesignEngine.CustomComponents.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="BlazorMonaco" />
 	<PackageReference Include="H.Util.Blazor" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
