--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- 官方库 -->
+    <PackageVersion Include="BlazorMonaco" Version="3.2.0" />
     <PackageVersion Include="Markdig" Version="0.31.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="8.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components" Version="8.0.4" />
