增加 admin 管理后台

--- a/src/RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.AntBlazor/H.LowCode.RenderEngine.AntBlazor.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<Import Project="..\..\global.props" />
-	<Import Project="..\..\lowcode.props" />
 	<Import Project="..\..\nuget.props" />
 
   <ItemGroup>
@@ -16,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.System" />
+    <PackageReference Include="H.Extensions.System" />
   </ItemGroup>
 
 </Project>
