--- a/src/Theme/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
+++ b/src/Theme/H.LowCode.Theme.AntBlazorPro/H.LowCode.Theme.AntBlazorPro.csproj
@@ -8,14 +8,15 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="BlazorMonaco" />
-	<PackageReference Include="H.Util.Blazor" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="AntDesign.ProLayout" />
+    <PackageReference Include="System.Net.Http.Json" />
     <PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
     <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
   </ItemGroup>
 
