--- a/src/Admin/H.LowCode.Admin.Host.Client/H.LowCode.Theme.AntBlazorPro.csproj
+++ b/src/Admin/H.LowCode.Admin.Host.Client/H.LowCode.Theme.AntBlazorPro.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<Import Project="..\..\global.props" />
+	<Import Project="..\..\lowcode.props" />
 	<Import Project="..\..\nuget.props" />
 
   <ItemGroup>
@@ -8,19 +9,20 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="BlazorMonaco" />
-	<PackageReference Include="H.Util.Blazor" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="AntDesign.ProLayout" />
+    <PackageReference Include="System.Net.Http.Json" />
     <PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
     <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="H.Extensions.System" />
+    <PackageReference Update="H.Extensions.System" />
   </ItemGroup>
 
 </Project>
