--- a/src/Admin/H.LowCode.Admin/H.LowCode.Admin.csproj
+++ b/src/Admin/H.LowCode.Admin/H.LowCode.Admin.csproj
@@ -1,16 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-	
+
 	<Import Project="..\..\global.props" />
-	<Import Project="..\..\nuget.props" />
 	
 	<ItemGroup>
-	  <None Remove="DesignPanel\DropItem.razor.css" />
-	  <None Remove="DesignPanel\DropItemContainer.razor.css" />
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <Content Include="DesignPanel\DropItemContainer.razor.css" />
-	  <Content Include="DesignPanel\DropItem.razor.css" />
+	  <Compile Remove="wwwroot\**" />
+	  <Content Remove="wwwroot\**" />
+	  <EmbeddedResource Remove="wwwroot\**" />
+	  <None Remove="wwwroot\**" />
 	</ItemGroup>
 
   <ItemGroup>
@@ -18,16 +14,15 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="AntDesign" />
-	<PackageReference Include="H.Util.Blazor" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.Web" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+	<PackageReference Include="AntDesign.ProLayout" />
 	<PackageReference Include="System.Net.Http.Json" />
-	<PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+    <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
+    <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
   </ItemGroup>
 
   <ItemGroup>
