--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -28,6 +28,7 @@
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageVersion Include="Volo.Abp.Core" Version="8.1.0" />
     <PackageVersion Include="AntDesign" Version="0.18.3" />
+	<PackageVersion Include="AntDesign.ProLayout" Version="0.17.3" />
     <!-- 个人库 -->
     <PackageVersion Include="H.Util.Blazor" Version="0.1.4" />
     <PackageVersion Include="H.Extensions.System" Version="0.1.5" />
