--- a/src/RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine/H.LowCode.RenderEngine.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\..\global.props" />
-	<Import Project="..\..\lowcode.props" />
 	<Import Project="..\..\nuget.props" />
 
   <ItemGroup>
@@ -13,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="H.Extensions.System" />
+    <PackageReference Include="H.Extensions.System" />
   </ItemGroup>
 
 </Project>
