--- a/src/Admin/H.LowCode.Admin.Application.Abstraction/H.LowCode.Admin.Application.Abstraction.csproj
+++ b/src/Admin/H.LowCode.Admin.Application.Abstraction/H.LowCode.Admin.Application.Abstraction.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\..\global.props" />
+	<Import Project="..\..\nuget.props" />
 	
 	<ItemGroup>
 	  <PackageReference Include="H.Extensions.System" />
