--- a/src/Admin/H.LowCode.Admin.Application/H.LowCode.Admin.Application.csproj
+++ b/src/Admin/H.LowCode.Admin.Application/H.LowCode.Admin.Application.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\..\global.props" />
+	<Import Project="..\..\nuget.props" />
 	
 	<ItemGroup>
 		<PackageReference Include="H.Ddd.Application" />
