--- a/src/Admin/H.LowCode.Admin/H.LowCode.Admin.csproj
+++ b/src/Admin/H.LowCode.Admin/H.LowCode.Admin.csproj
@@ -1,20 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<Import Project="..\..\global.props" />
+	<Import Project="..\..\nuget.props" />
 	
-	<ItemGroup>
-	  <Compile Remove="wwwroot\**" />
-	  <Content Remove="wwwroot\**" />
-	  <EmbeddedResource Remove="wwwroot\**" />
-	  <None Remove="wwwroot\**" />
-	</ItemGroup>
-
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 
-  <ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+	<ItemGroup>
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
 	<PackageReference Include="AntDesign.ProLayout" />
 	<PackageReference Include="System.Net.Http.Json" />
