- 增加 H.LowCode.DesignEngine 服务端 HttpApi、Application 等 - 增加 H.LowCode.DesignEngine.Abstraction 抽象层，用于抽象组件（默认组件，扩展组件）、模板页 加载逻辑，同时便于后续自定义组件实现 - 移除部分 BlazorEventDispatcher.RegisterEvent 事件订阅逻辑，因为所有该类型组件都会触发事件。改为 Component.RefreshState() 仅刷新指定组件，减少不必要的组件渲染 - 增加页面库模板页加载逻辑，同时增加 Form、Table 模板页(待实现) - 增加 AppSchema、PropertyItemSchema 类型

--- a/src/Admin/H.LowCode.Admin.Application.Abstraction/H.LowCode.Admin.Application.Abstraction.csproj
+++ b/src/Admin/H.LowCode.Admin.Application.Abstraction/H.LowCode.Admin.Application.Abstraction.csproj
@@ -1,10 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.props" />
 	
-	<ItemGroup>
-	  <PackageReference Include="H.Extensions.System" />
-	</ItemGroup>
-
 </Project>
