--- a/src/Admin/H.LowCode/H.LowCode.csproj
+++ b/src/Admin/H.LowCode/H.LowCode.csproj
@@ -15,7 +15,7 @@
   <ItemGroup>
 	<ProjectReference Include="..\H.LowCode.Admin\H.LowCode.Admin.csproj" />
 	<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
-	<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.CustomComponents\H.LowCode.DesignEngine.CustomComponents.csproj" />
+	<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.ExtensionComponents\H.LowCode.DesignEngine.ExtensionComponents.csproj" />
 	<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.DefaultComponents\H.LowCode.DesignEngine.DefaultComponents.csproj" />
 	<ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
 	<ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine.AntBlazor\H.LowCode.RenderEngine.AntBlazor.csproj" />
