--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/H.LowCode.DesignEngine.DefaultComponents.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/H.LowCode.DesignEngine.DefaultComponents.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+    <ProjectReference Include="..\H.LowCode.DesignEngine.Abstraction\H.LowCode.DesignEngine.Abstraction.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
   </ItemGroup>
 
