--- a/src/Host/H.LowCode.Admin.Host/H.LowCode.Admin.Host.csproj
+++ b/src/Host/H.LowCode.Admin.Host/H.LowCode.Admin.Host.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\Admin\H.LowCode\H.LowCode.csproj" />
 		<ProjectReference Include="..\..\Admin\H.LowCode.Admin.HttpApi\H.LowCode.Admin.HttpApi.csproj" />
+		<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.HttpApi\H.LowCode.DesignEngine.HttpApi.csproj" />
 		<ProjectReference Include="..\H.LowCode.Admin.Host.Client\H.LowCode.Admin.Host.Client.csproj" />
 	</ItemGroup>
 </Project>
