--- a/src/DesignEngine/H.LowCode.DesignEngine.Abstraction/H.LowCode.DesignEngine.Abstraction.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Abstraction/H.LowCode.DesignEngine.Abstraction.csproj
@@ -3,23 +3,16 @@
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.props" />
 
-  <ItemGroup>
+	<ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="BlazorMonaco" />
-	<PackageReference Include="H.Util.Blazor" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
-    <PackageReference Include="Volo.Abp.Core" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="H.Extensions.System" />
   </ItemGroup>
 
 </Project>
