--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/H.LowCode.DesignEngine.DefaultComponents.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/H.LowCode.DesignEngine.DefaultComponents.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Components\ButtonWrap.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
+
 </Project>
