--- a/src/DesignEngine/H.LowCode.DesignEngine.ExtensionComponents/H.LowCode.DesignEngine.ExtensionComponents.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.ExtensionComponents/H.LowCode.DesignEngine.ExtensionComponents.csproj
@@ -8,8 +8,8 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="BlazorMonaco" />
 	<PackageReference Include="H.Util.Blazor" />
+	<PackageReference Include="Mapsui.Blazor" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Volo.Abp.Core" />
   </ItemGroup>
@@ -17,6 +17,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
     <ProjectReference Include="..\H.LowCode.DesignEngine.Abstraction\H.LowCode.DesignEngine.Abstraction.csproj" />
+    <ProjectReference Include="..\H.LowCode.DesignEngine.DefaultComponents\H.LowCode.DesignEngine.DefaultComponents.csproj" />
+    <ProjectReference Include="..\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
   </ItemGroup>
 
   <ItemGroup>
