--- a/src/DesignEngine/H.LowCode.DesignEngine.HttpApi/H.LowCode.DesignEngine.HttpApi.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.HttpApi/H.LowCode.DesignEngine.HttpApi.csproj
@@ -8,6 +8,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
 	  <ProjectReference Include="..\H.LowCode.DesignEngine.Application.Abstraction\H.LowCode.DesignEngine.Application.Abstraction.csproj" />
 	  <ProjectReference Include="..\H.LowCode.DesignEngine.Application\H.LowCode.DesignEngine.Application.csproj" />
 	</ItemGroup>
