--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -8,12 +8,13 @@
   <ItemGroup>
     <!-- 官方库 -->
     <PackageVersion Include="BlazorMonaco" Version="3.2.0" />
+    <PackageVersion Include="Mapsui.Blazor" Version="4.1.6" />
     <PackageVersion Include="Markdig" Version="0.31.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components" Version="8.0.5" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.4" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.5" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components" Version="8.0.6" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.6" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.6" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.6" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" />
     <!-- 分析器 -->
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" />
@@ -26,9 +27,9 @@
     <PackageVersion Include="coverlet.collector" Version="6.0.0" />
     <!-- 第三方库 -->
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageVersion Include="Volo.Abp.Core" Version="8.1.3" />
-    <PackageVersion Include="AntDesign" Version="0.19.0" />
-    <PackageVersion Include="AntDesign.ProLayout" Version="0.19.0" />
+    <PackageVersion Include="Volo.Abp.Core" Version="8.1.4" />
+    <PackageVersion Include="AntDesign" Version="0.19.2" />
+    <PackageVersion Include="AntDesign.ProLayout" Version="0.19.2" />
     <!-- 个人库 -->
     <PackageVersion Include="H.Util.Blazor" Version="0.1.4" />
     <PackageVersion Include="H.Extensions.System" Version="0.1.5" />
