--- a/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine/H.LowCode.DesignEngine.csproj
@@ -4,11 +4,13 @@
 	<Import Project="..\..\nuget.props" />
 	
 	<ItemGroup>
+	  <None Remove="DesignPanel\ComponentItem.razor.css" />
 	  <None Remove="DesignPanel\DropItem.razor.css" />
 	  <None Remove="DesignPanel\DropItemContainer.razor.css" />
 	</ItemGroup>
 	
 	<ItemGroup>
+	  <Content Include="DesignPanel\ComponentItem.razor.css" />
 	  <Content Include="DesignPanel\DropItemContainer.razor.css" />
 	  <Content Include="DesignPanel\DropItem.razor.css" />
 	</ItemGroup>
@@ -36,7 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="SettingPanel\DataSourceSetting.razor">
+    <Content Update="DesignPanel\ComponentItem.razor">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
   </ItemGroup>
