- 实现新增应用，并根据应用获取页面列表 - 首页、模板中心、解决方案中心布局调整，填充空示例

--- a/src/DesignEngine/H.LowCode.DesignEngine.Application/H.LowCode.DesignEngine.Application.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Application/H.LowCode.DesignEngine.Application.csproj
@@ -8,6 +8,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Admin\H.LowCode.Admin.DTO\H.LowCode.Admin.DTO.csproj" />
 	  <ProjectReference Include="..\H.LowCode.DesignEngine.Application.Abstraction\H.LowCode.DesignEngine.Application.Abstraction.csproj" />
 	</ItemGroup>
 
