--- a/src/Admin/H.LowCode.Admin/H.LowCode.Admin.csproj
+++ b/src/Admin/H.LowCode.Admin/H.LowCode.Admin.csproj
@@ -8,6 +8,7 @@
   </ItemGroup>
 
 	<ItemGroup>
+	<PackageReference Include="H.Util.Blazor" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
 	<PackageReference Include="AntDesign.ProLayout" />
 	<PackageReference Include="Microsoft.Extensions.Http" />
@@ -17,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
     <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
+    <ProjectReference Include="..\H.LowCode.Admin.DTO\H.LowCode.Admin.DTO.csproj" />
   </ItemGroup>
 
   <ItemGroup>
