--- a/src/DesignEngine/H.LowCode.DesignEngine.Application.Abstraction/H.LowCode.DesignEngine.Application.Abstraction.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Application.Abstraction/H.LowCode.DesignEngine.Application.Abstraction.csproj
@@ -2,5 +2,9 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.props" />
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Admin\H.LowCode.Admin.DTO\H.LowCode.Admin.DTO.csproj" />
+	  <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+	</ItemGroup>
 
 </Project>
