实现菜单管理

--- a/src/Admin/H.LowCode.Admin.HttpApi/H.LowCode.Admin.HttpApi.csproj
+++ b/src/Admin/H.LowCode.Admin.HttpApi/H.LowCode.Admin.HttpApi.csproj
@@ -4,7 +4,7 @@
 	<Import Project="..\..\nuget.props" />
 
   <ItemGroup>
-    <PackageReference Include="H.Ddd.HttpApi" />
+	  <PackageReference Include="Volo.Abp.AspNetCore.Mvc" />
   </ItemGroup>
 
   <ItemGroup>
