--- a/src/DesignEngine/H.LowCode.DesignEngine.Application/H.LowCode.DesignEngine.Application.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Application/H.LowCode.DesignEngine.Application.csproj
@@ -2,9 +2,8 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.props" />
-
 	<ItemGroup>
-		<PackageReference Include="H.Ddd.Application" />
+	  <PackageReference Include="Volo.Abp.Core" />
 	</ItemGroup>
 
 	<ItemGroup>
