--- a/src/DesignEngine/H.LowCode.DesignEngine.HttpApi/H.LowCode.DesignEngine.HttpApi.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.HttpApi/H.LowCode.DesignEngine.HttpApi.csproj
@@ -2,9 +2,9 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.props" />
-
+	
 	<ItemGroup>
-		<PackageReference Include="H.Ddd.HttpApi" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Mvc" />
 	</ItemGroup>
 
 	<ItemGroup>
