--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -10,6 +10,7 @@
     <PackageVersion Include="BlazorMonaco" Version="3.2.0" />
     <PackageVersion Include="Mapsui.Blazor" Version="4.1.7" />
     <PackageVersion Include="Markdig" Version="0.31.0" />
+    <PackageVersion Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
     <PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="8.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components" Version="8.0.7" />
@@ -27,14 +28,13 @@
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.0" />
     <PackageVersion Include="coverlet.collector" Version="6.0.0" />
     <!-- 第三方库 -->
-    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageVersion Include="Volo.Abp.Core" Version="8.2.0" />
-    <PackageVersion Include="AntDesign" Version="0.19.4" />
-    <PackageVersion Include="AntDesign.ProLayout" Version="0.19.4" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.7.0" />
+    <PackageVersion Include="Volo.Abp.Core" Version="8.2.1" />
+    <PackageVersion Include="Volo.Abp.AspNetCore.Mvc" Version="8.2.1" />
+    <PackageVersion Include="AntDesign" Version="0.20.0" />
+    <PackageVersion Include="AntDesign.ProLayout" Version="0.20.0" />
     <!-- 个人库 -->
     <PackageVersion Include="H.Util.Blazor" Version="0.1.4" />
-    <PackageVersion Include="H.Extensions.System" Version="0.1.5" />
-    <PackageVersion Include="H.Ddd.HttpApi" Version="0.1.5" />
-    <PackageVersion Include="H.Ddd.Application" Version="0.1.5" />
+    <PackageVersion Include="H.Extensions.System" Version="0.1.6" />
   </ItemGroup>
 </Project>
