--- a/src/Host/H.LowCode.Admin.Host/H.LowCode.Admin.Host.csproj
+++ b/src/Host/H.LowCode.Admin.Host/H.LowCode.Admin.Host.csproj
@@ -4,6 +4,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" />
+		<PackageReference Include="Swashbuckle.AspNetCore" />
 	</ItemGroup>
 	
 	<ItemGroup>
