--- a/src/Host/H.LowCode.Admin.Host/H.LowCode.Admin.Host.csproj
+++ b/src/Host/H.LowCode.Admin.Host/H.LowCode.Admin.Host.csproj
@@ -13,4 +13,12 @@
 		<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.HttpApi\H.LowCode.DesignEngine.HttpApi.csproj" />
 		<ProjectReference Include="..\H.LowCode.Admin.Host.Client\H.LowCode.Admin.Host.Client.csproj" />
 	</ItemGroup>
+	
+	<ItemGroup>
+	  <WasmExtraFilesToDeploy Remove="wwwroot\admin.css" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <_ContentIncludedByDefault Remove="wwwroot\admin.css" />
+	</ItemGroup>
 </Project>
