忽略日志文件

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 *.resources
 *.userosscache
 *.sln.docstates
-
+*.log
 
 # User-specific files (MoniDevelop/Xamarin Studio)
 *.userprefs
@@ -32,6 +32,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 packages/
+[Ll]ogs/
 
 
 # Visual Studio 2015 cache/options directory
