- [DesignEngine] 菜单管理排序、删除等功能完善 - [RenderEngine] 应用菜单数据从元数据文件加载

--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/H.LowCode.ThemeParts.AntBlazor.csproj
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/H.LowCode.ThemeParts.AntBlazor.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="H.Extensions.System" />
+	<PackageReference Include="H.Util.Blazor" />
   </ItemGroup>
 
 </Project>
