- 将项目名称 XXX.Application.Abstraction 改为 XXX.Application.Contracts（命名风格统一） - 将元数据目录从硬编码改为 appsettings.json 配置

--- a/src/Admin/H.LowCode.Admin.Application/H.LowCode.Admin.Application.csproj
+++ b/src/Admin/H.LowCode.Admin.Application/H.LowCode.Admin.Application.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-	  <ProjectReference Include="..\H.LowCode.Admin.Application.Abstraction\H.LowCode.Admin.Application.Abstraction.csproj" />
+	  <ProjectReference Include="..\H.LowCode.Admin.Application.Contracts\H.LowCode.Admin.Application.Contracts.csproj" />
 	</ItemGroup>
 
 </Project>
