--- a/src/DesignEngine/H.LowCode.DesignEngine.Application/H.LowCode.DesignEngine.Application.csproj
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Application/H.LowCode.DesignEngine.Application.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\H.LowCode.DesignEngine.Application.Abstraction\H.LowCode.DesignEngine.Application.Abstraction.csproj" />
+	  <ProjectReference Include="..\H.LowCode.DesignEngine.Application.Contracts\H.LowCode.DesignEngine.Application.Contracts.csproj" />
 	  <ProjectReference Include="..\H.LowCode.DesignEngine.Model\H.LowCode.DesignEngine.Model.csproj" />
 	</ItemGroup>
 
