--- a/src/RenderEngine/H.LowCode.RenderEngine.Application/H.LowCode.RenderEngine.Application.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.Application/H.LowCode.RenderEngine.Application.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\H.LowCode.RenderEngine.Application.Abstraction\H.LowCode.RenderEngine.Application.Abstraction.csproj" />
+	  <ProjectReference Include="..\H.LowCode.RenderEngine.Application.Contracts\H.LowCode.RenderEngine.Application.Contracts.csproj" />
 	</ItemGroup>
 
 </Project>
