--- a/src/RenderEngine/H.LowCode.RenderEngine.HttpApi/H.LowCode.RenderEngine.HttpApi.csproj
+++ b/src/RenderEngine/H.LowCode.RenderEngine.HttpApi/H.LowCode.RenderEngine.HttpApi.csproj
@@ -13,7 +13,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
-	  <ProjectReference Include="..\H.LowCode.RenderEngine.Application.Abstraction\H.LowCode.RenderEngine.Application.Abstraction.csproj" />
+	  <ProjectReference Include="..\H.LowCode.RenderEngine.Application.Contracts\H.LowCode.RenderEngine.Application.Contracts.csproj" />
 	  <ProjectReference Include="..\H.LowCode.RenderEngine.Application\H.LowCode.RenderEngine.Application.csproj" />
 	</ItemGroup>
 
