--- a/src/Admin/H.LowCode.Admin.HttpApi/H.LowCode.Admin.HttpApi.csproj
+++ b/src/Admin/H.LowCode.Admin.HttpApi/H.LowCode.Admin.HttpApi.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-      <ProjectReference Include="..\H.LowCode.Admin.Application.Abstraction\H.LowCode.Admin.Application.Abstraction.csproj" />
+      <ProjectReference Include="..\H.LowCode.Admin.Application.Contracts\H.LowCode.Admin.Application.Contracts.csproj" />
       <ProjectReference Include="..\H.LowCode.Admin.Application\H.LowCode.Admin.Application.csproj" />
   </ItemGroup>
 
