--- a/src/Host/H.LowCode.Admin.Host/appsettings.json
+++ b/src/Host/H.LowCode.Admin.Host/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "meta": {
+    "fileBasePath": "D:\\H\\code\\my\\H.LowCode\\meta"
+  },
   "AllowedHosts": "*"
 }
