- H.LowCode.Admin 重命名为 H.LowCode.Workbench - 移除所有 RootNamespace

--- a/src/Host/H.LowCode.Admin.Host.Client/H.LowCode.Admin.Host.Client.csproj
+++ b/src/Host/H.LowCode.Admin.Host.Client/H.LowCode.Admin.Host.Client.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 	
   <ItemGroup>
-    <ProjectReference Include="..\..\Admin\H.LowCode\H.LowCode.csproj" />
+    <ProjectReference Include="..\..\Host\H.LowCode\H.LowCode.csproj" />
   </ItemGroup>
 	
 </Project>
