--- a/src/Host/H.LowCode.Admin.Host/H.LowCode.Admin.Host.csproj
+++ b/src/Host/H.LowCode.Admin.Host/H.LowCode.Admin.Host.csproj
@@ -8,8 +8,8 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-		<ProjectReference Include="..\..\Admin\H.LowCode\H.LowCode.csproj" />
-		<ProjectReference Include="..\..\Admin\H.LowCode.Admin.HttpApi\H.LowCode.Admin.HttpApi.csproj" />
+		<ProjectReference Include="..\..\Host\H.LowCode\H.LowCode.csproj" />
+		<ProjectReference Include="..\..\Workbench\H.LowCode.Workbench.HttpApi\H.LowCode.Workbench.HttpApi.csproj" />
 		<ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine.HttpApi\H.LowCode.DesignEngine.HttpApi.csproj" />
 		<ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine.HttpApi\H.LowCode.RenderEngine.HttpApi.csproj" />
 		<ProjectReference Include="..\H.LowCode.Admin.Host.Client\H.LowCode.Admin.Host.Client.csproj" />
