--- a/src/Workbench/H.LowCode.Workbench.Application/H.LowCode.Workbench.Application.csproj
+++ b/src/Workbench/H.LowCode.Workbench.Application/H.LowCode.Workbench.Application.csproj
@@ -2,14 +2,13 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.publish.props" />
-	
+
 	<ItemGroup>
 	  <PackageReference Include="Volo.Abp.Core" />
 	</ItemGroup>
-
+	
 	<ItemGroup>
-	  <ProjectReference Include="..\H.LowCode.DesignEngine.Application.Contracts\H.LowCode.DesignEngine.Application.Contracts.csproj" />
-	  <ProjectReference Include="..\H.LowCode.DesignEngine.Model\H.LowCode.DesignEngine.Model.csproj" />
+	  <ProjectReference Include="..\H.LowCode.Workbench.Application.Contracts\H.LowCode.Workbench.Application.Contracts.csproj" />
 	</ItemGroup>
 
 </Project>
