--- a/src/Workbench/H.LowCode.Workbench/H.LowCode.Workbench.csproj
+++ b/src/Workbench/H.LowCode.Workbench/H.LowCode.Workbench.csproj
@@ -13,13 +13,15 @@
 	<PackageReference Include="AntDesign.ProLayout" />
 	<PackageReference Include="Microsoft.Extensions.Http" />
 	<PackageReference Include="System.Net.Http.Json" />
-	<PackageReference Include="Volo.Abp.Core" />
-    <PackageReference Include="H.Extensions.System" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
-    <ProjectReference Include="..\H.LowCode.DesignEngine.Model\H.LowCode.DesignEngine.Model.csproj" />
+    <ProjectReference Include="..\..\DesignEngine\H.LowCode.DesignEngine\H.LowCode.DesignEngine.csproj" />
+    <ProjectReference Include="..\..\RenderEngine\H.LowCode.RenderEngine\H.LowCode.RenderEngine.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="H.Extensions.System" />
   </ItemGroup>
 
 </Project>
