--- a/src/Workbench/H.LowCode.Workbench.HttpApi/Properties/launchSettings.json
+++ b/src/Workbench/H.LowCode.Workbench.HttpApi/Properties/launchSettings.json
@@ -1,12 +1,12 @@
 {
   "profiles": {
-    "H.LowCode.Workbench": {
+    "H.LowCode.Workbench.HttpApi": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:63876;http://localhost:63878"
+      "applicationUrl": "https://localhost:64754;http://localhost:64760"
     }
   }
 }
