- H.Lowcode.Workbench 相关命名由 Admin 重命名为 Workbench - 将 H.LowCode.DesignEngine.Admin 中的 GetAppsAsync、SaveAppAsync api 移到 H.LowCode.Workbench

--- a/src/Workbench/H.LowCode.Workbench.Application.Contracts/H.LowCode.Workbench.Application.Contracts.csproj
+++ b/src/Workbench/H.LowCode.Workbench.Application.Contracts/H.LowCode.Workbench.Application.Contracts.csproj
@@ -2,5 +2,8 @@
 
 	<Import Project="..\..\global.props" />
 	<Import Project="..\..\nuget.publish.props" />
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Schema\H.LowCode.MetaSchema\H.LowCode.MetaSchema.csproj" />
+	</ItemGroup>
 
 </Project>
